8月号_Ingressの仕組み/app2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: app2
  name: app2
spec:
  serviceAccount: admin
  containers:
    - name: app2
      image: sample_api:1.0
      command: ["python", "app.py"]
